<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/profile_image"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_gravity="center_horizontal"
          android:layout_margin="16dp"
          android:src="@drawable/ic_account"
          app:civ_fill_color="?attr/colorPrimary"
          />

      <TextView
          android:id="@+id/user_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="16dp"
          android:fontFamily="sans-serif-light"
          android:text="@string/awesome_user"
          android:textColor="@android:color/black"
          android:textSize="16sp"
          />

      <Button
          android:id="@+id/preferences"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:background="@android:color/white"
          android:text="@string/preferences"
          />

      <Button
          android:id="@+id/about"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:background="@android:color/white"
          android:text="@string/about"
          />

      <Button
          android:id="@+id/logout"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:background="@android:color/white"
          android:text="@string/logout"

          />


      <com.google.android.gms.common.SignInButton
          android:id="@+id/sign_in_button"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          />

    </LinearLayout>
  </ScrollView>
</layout>