<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/coordinator_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <android.support.v7.widget.Toolbar
          android:id="@+id/mainToolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="?attr/colorPrimary"
          android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/display_no_tasks"
          android:visibility="gone"
          />

      <android.support.v7.widget.RecyclerView
          android:id="@+id/recycler_view_routines"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          />

      <TextView
          android:id="@+id/empty_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:visibility="gone"
          android:fontFamily="sans-serif-light"
          android:textColor="@android:color/black"
          android:text="@string/display_no_tasks" />

      <RadioGroup
          android:id="@+id/radio_group_break"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="@dimen/default_margin"
          >

        <RadioButton
            android:id="@+id/radio_five_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_mins_break"
            />

        <RadioButton
            android:id="@+id/radio_ten_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ten_mins_break"
            />
      </RadioGroup>

      <ImageView
          android:id="@+id/play"
          android:layout_width="match_parent"
          android:layout_height="@dimen/list_item_size"
          android:background="?attr/colorPrimaryDark"
          android:foreground="?attr/selectableItemBackground"
          android:padding="@dimen/medium_padding"
          android:src="@drawable/ic_play"
          android:contentDescription="@string/play_routine"
          />
    </LinearLayout>

  </android.support.design.widget.CoordinatorLayout>
</layout>
